<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="32dp"
            android:paddingBottom="42dp">

            <ImageView
                android:id="@+id/bookImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone"
                tools:visibility="visible"
                android:contentDescription="@string/image_of_book" />

            <LinearLayout
                android:id="@+id/isbnWrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/helpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/isbn_helpText"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/isbnTextInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_ISBN"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:ems="10"
                            android:hint="@string/isbn_number"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/isbnSearchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/isbn_search"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        android:src="@drawable/ic_search_black" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/timeTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/time">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:inputType="date"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bookTitleTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/book_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_bookTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pgFromTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:hint="@string/read_from_page">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_pagesFrom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionNext"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pgToTextInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/read_to_page">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_pagesTo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:imeOptions="actionDone"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/ratingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rating"
                android:textSize="16sp" />

            <RatingBar
                android:id="@+id/ratingBar"
                style = "?android:attr/ratingBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/entry_rating"
                android:progressBackgroundTint="@color/ratingBarLight"
                android:progressTint="@color/secondaryLightColor"
                android:secondaryProgressTint="@color/secondaryLightColor"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/childCommentsTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:hint="@string/child_s_comments">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_childComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/parentCommentsTextInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:hint="@string/parent_s_comments">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText_parentComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
